Gave the split pane a new layout.
The text is now side by side and the images are above and below.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- About Section -->
         <section class="width-100">
           <div class="max-width">
-            <div class="text-container center-justify-text">
+            <div class="text-container">
               <p>
                 Developed by the Rees Group in late 2014, through to early 2015, Dafen Trade Park is Llanelli's latest trade focused development.
                 With 10 Bespoke trade counter units available, each with a long term lease, Dafen Trade Park aims to satisfy the requirement for a
@@ -88,24 +88,27 @@
 
           <div class="dual-pane-container">
             <div class="width-50">
-              <div class="text-container">
-                <h2>Site History</h2>
-                <p>
-                  Originally the premises, that we have now converted into a sleek and modern trade centre, was owned and operated by Avon Inflatables.
-                  The building itself is steeped in history; being the location at which Avon designed and developed some of their best-in-class
-                  RIBs (Rigid Inflatable Boats). The products that once passed through these doors have been used worldwide, with uses ranging from
-                  military to recreational use, and we feel honoured to be returning this derelict shell to its former glory.
-                </p>
-              </div>
+              <div class="dual-pane-image" style="background: url('images/story/dafen-park-indoors-09.jpg')"></div>
             </div>
             <div class="width-50">
-              <div class="dual-pane-image" style="background: url('images/story/dafen-park-indoors-09.jpg')"></div>
+              <div class="dual-pane-image" style="background: url('images/story/dafen-park-outdoors-06.jpg')"></div>
             </div>
           </div>
 
           <div class="dual-pane-container">
             <div class="width-50">
-              <div class="dual-pane-image" style="background: url('images/story/dafen-park-outdoors-06.jpg')"></div>
+              <div class="text-container">
+                <h2>Site History</h2>
+                <p>
+                  Originally the premises, that we have now converted into a sleek and modern trade centre, was owned and operated by Avon Inflatables.
+                  The building itself is steeped in history; being the location at which Avon designed and developed some of their best-in-class
+                  RIBs (Rigid Inflatable Boats).
+                  <br>
+                  <br>
+                  The products that once passed through these doors have been used worldwide, with uses ranging from
+                  military to recreational use, and we feel honoured to be returning this derelict shell to its former glory.
+                </p>
+              </div>
             </div>
             <div class="width-50">
               <div class="text-container">
@@ -113,7 +116,10 @@
                 <p>
                   When we first arrived on the site it was clear that this was going to be a large project. Set in approximately 2.7 acres of land,
                   with a footprint of around 35,000 square feet, the derelict factory seemed enormous. Work on site began almost immediately after
-                  the documents had been signed and the progress that our team made was astonishing. Within two weeks, the exterior had been totally
+                  the documents had been signed and the progress that our team made was astonishing.
+                  <br>
+                  <br>
+                  Within two weeks, the exterior had been totally
                   transformed from a severely overgrown wilderness to an organised and clear working environment. After years of neglect, the building
                   was finally receiving the attention it so desperately needed.
                 </p>
@@ -128,13 +134,28 @@
                 <p>
                   From the earliest design sketches on scrap pieces of paper to the 3D rendered CAD drawings carried out by our architecture team,
                   the design of Dafen Trade Park has been a primary focus from day one. We take pride in creating functional and beautiful
-                  buildings that really deliver on even the most acute aspects of usability. We notice the fine details that others may not and
+                  buildings that really deliver on even the most acute aspects of usability.
+                  <br>
+                  <br>
+                  We notice the fine details that others may not and
                   aim to provide a solution that is not just satisfactory, but one that has been fine tuned to ensure the highest level of quality.
                 </p>
               </div>
             </div>
             <div class="width-50">
-              <div class="dual-pane-image" style="background: url('images/story/proposed-floor-plan-dark.jpg')"></div>
+              <div class="text-container">
+                <h2>Completion</h2>
+                <p>
+                  Now, at the end of our journey, it's clear to us that our commitment and passion for this project has been worth it. We have
+                  had immense pleasure from watching the development take shape and we are extremely proud of what our local team of craftsmen
+                  has been able to achieve.
+                  <br>
+                  <br>
+                  We feel that supporting the local community is an extremely important goal and one that resonates
+                  throughout the development process of Dafen Trade Park and we hope that this will remain the case throughout the running of the
+                  park.
+                </p>
+              </div>
             </div>
           </div>
 
@@ -143,16 +164,7 @@
               <div class="dual-pane-image" style="background: url('images/story/dafen-park-outdoors-12.jpg')"></div>
             </div>
             <div class="width-50">
-              <div class="text-container">
-                <h2>Completion</h2>
-                <p>
-                  Now, at the end of our journey, it's clear to us that our commitment and passion for this project has been worth it. We have
-                  had immense pleasure from watching the development take shape and we are extremely proud of what our local team of craftsmen
-                  has been able to achieve. We feel that supporting the local community is an extremely important goal and one that resonates
-                  throughout the development process of Dafen Trade Park and we hope that this will remain the case throughout the running of the
-                  park.
-                </p>
-              </div>
+              <div class="dual-pane-image" style="background: url('images/story/dafen-park-indoors-13.jpg')"></div>
             </div>
           </div>
 
@@ -162,7 +174,7 @@
         <section class="width-100">
 
           <div class="max-width">
-            <div class="text-container center-justify-text">
+            <div class="text-container">
               <h1>The Gallery</h1>
               <p>
                 Throughout the development process we ensured that we documented our progress. It was of great importance to us that
@@ -198,7 +210,7 @@
         <!-- Meet the Team -->
         <section>
           <div class="max-width">
-            <div class="text-container center-justify-text">
+            <div class="text-container">
               <h1>Meet the Team</h1>
               <p>
                 We are a small team with a focused eye for detail, commitment and workmanship. Without our team, our goals for Dafen Trade Park
@@ -213,20 +225,5 @@
 
       <footer class="site-footer"></footer>
 
-      <script type="text/javascript">
-
-      // Function to provide the dual panel images
-      // with the correct height
-      function dualPaneImage() {
-        var dualPaneImage = document.getElementsByClassName('dual-pane-image');
-        for (var i = 0; i < dualPaneImage.length; i++) {
-          var height = dualPaneImage[i].parentElement.offsetHeight;
-          dualPaneImage[i].style.height = height + 'px';
-        }
-      }
-      dualPaneImage();
-      window.onresize = dualPaneImage();
-
-      </script>
   </body>
 </html>
