Layout of the main site complete.
The main site layout is now complete. Gallery view still to be built.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Dafen Trade Park, Llanelli | Carmarthenshire's newest trade park development</title>
+    <title>Dafen Trade Park | Llanelli</title>
     <meta name="author" content="Dafen Trade Park">
     <meta name="description" content="Dafen Trade Park is Llanelli's newest trade park development. Located on the A4138, Dafen Trade Park sits on the gateway to Llanelli offering tenants an audience of 281, 000 people within a 30 minute trade area.">
     <meta name="Keywords" content="dafen, llanelli, carmarthenshire, development, trade, centre, building, construction, real estate, lettings, offices, units, factory, space">
@@ -22,15 +22,15 @@
     <nav role="navigation" class="navigation">
 
         <div>
-          <h1 class="logo"><a href="#">Dafen Trade Park</a></h1>
+          <h1 class="logo"><a data-scroll href="#">Dafen Trade Park</a></h1>
         </div>
         <div>
             <ul class="list--site-navigation">
-              <li><a href="#about">About</a></li>
-              <li><a href="#story">Story</a></li>
-              <li><a href="#gallery">Gallery</a></li>
-              <li><a href="#team">Team</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a data-scroll href="#about">About</a></li>
+              <li><a data-scroll href="#story">Story</a></li>
+              <li><a data-scroll href="#gallery">Gallery</a></li>
+              <li><a data-scroll href="#team">Team</a></li>
+              <li><a data-scroll href="#contact">Contact</a></li>
             </ul>
         </div>
 
@@ -40,15 +40,16 @@
 
         <!-- Header Section -->
         <section class="width-100">
-          <div class="header-image">
+          <div class="header-image" style="background: url('images/header/dafen-trade-park-after.jpg')">
             <div class="container">
-              <h1>Built To Inspire</h1>
+              <h1>Every great story starts with a strong foundation.</h1>
+              <a data-scroll class="button--start-yours" href="#contact">Start Yours Today</a>
             </div>
           </div>
         </section>
 
         <!-- About Section -->
-        <section class="width-100">
+        <section id="about" class="width-100">
           <div class="max-width">
             <div class="text-container">
               <p>
@@ -95,7 +96,7 @@
             </div>
           </div>
 
-          <div class="dual-pane-container">
+          <div id="story" class="dual-pane-container">
             <div class="width-50">
               <div class="text-container">
                 <h2>Site History</h2>
@@ -171,7 +172,7 @@
         </section>
 
         <!-- The Gallery -->
-        <section class="width-100">
+        <section id="gallery" class="width-100">
 
           <div class="max-width">
             <div class="text-container">
@@ -208,7 +209,8 @@
         </section>
 
         <!-- Meet the Team -->
-        <section>
+        <section id="team" class="width-100">
+
           <div class="max-width">
             <div class="text-container">
               <h1>Meet the Team</h1>
@@ -219,11 +221,171 @@
               </p>
             </div>
           </div>
+
+          <div class="image-grid-container width-100 margin-top-100">
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04964.jpg')"></a>
+              <span>
+                <h3>Robert Rees</h3>
+                <figcaption>Site Director</figcaption>
+              </span>
+            </div>
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04965.jpg')"></a>
+              <span>
+                <h3>Marik Surname</h3>
+                <figcaption>Painter</figcaption>
+              </span>
+            </div>
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04969.jpg')"></a>
+              <span>
+                <h3>Firstname Surname</h3>
+                <figcaption>Site Role</figcaption>
+              </span>
+            </div>
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04972.jpg')"></a>
+              <span>
+                <h3>Firstname Surname</h3>
+                <figcaption>Site Role</figcaption>
+              </span>
+            </div>
+          </div>
+
+          <div class="image-grid-container width-100">
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04964.jpg')"></a>
+              <span>
+                <h3>Robert Rees</h3>
+                <figcaption>Site Director</figcaption>
+              </span>
+            </div>
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04965.jpg')"></a>
+              <span>
+                <h3>Marik Surname</h3>
+                <figcaption>Painter</figcaption>
+              </span>
+            </div>
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04969.jpg')"></a>
+              <span>
+                <h3>Firstname Surname</h3>
+                <figcaption>Site Role</figcaption>
+              </span>
+            </div>
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04972.jpg')"></a>
+              <span>
+                <h3>Firstname Surname</h3>
+                <figcaption>Site Role</figcaption>
+              </span>
+            </div>
+          </div>
+
+          <div class="image-grid-container width-100">
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04964.jpg')"></a>
+              <span>
+                <h3>Robert Rees</h3>
+                <figcaption>Site Director</figcaption>
+              </span>
+            </div>
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04965.jpg')"></a>
+              <span>
+                <h3>Marik Surname</h3>
+                <figcaption>Painter</figcaption>
+              </span>
+            </div>
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04969.jpg')"></a>
+              <span>
+                <h3>Firstname Surname</h3>
+                <figcaption>Site Role</figcaption>
+              </span>
+            </div>
+            <div class="width-25">
+              <a class="image" style="background: url('images/team/DSC04972.jpg')"></a>
+              <span>
+                <h3>Firstname Surname</h3>
+                <figcaption>Site Role</figcaption>
+              </span>
+            </div>
+          </div>
+
+        </section>
+
+        <!-- Contact Section -->
+        <section class="width-100">
+
+          <div class="dual-pane-container">
+            <div class="width-50">
+              <div class="dual-pane-image" style="background: url('images/story/dafen-park-outdoors-12.jpg')"></div>
+            </div>
+            <div class="width-50">
+              <div class="dual-pane-image" style="background: url('images/story/dafen-park-indoors-13.jpg')"></div>
+            </div>
+          </div>
+
+          <div id="contact" class="dual-pane-container contact-text">
+            <div class="width-50">
+              <div class="text-container">
+                <h2>Contact Us</h2>
+                <p>
+                  If you're interested in speaking to us about leasing a unit then please do not hesitate to get in touch. You can call our
+                  office from 9.00 am to 5.00 pm on weekdays or simply send us an email for us to get back to you. If you'd like to deal
+                  with our managing director personally then just ask us, we'd be more than happy to arrange a meeting with you.
+                  <br>
+                  <br>
+                  Viewings and lease agreements are handled by the excellent team over at Lambert Smith Hampton. If you'd like to arrange a
+                  viewing then simply follow the contact details below to get in touch.
+                </p>
+              </div>
+            </div>
+            <div class="width-25">
+              <div class="text-container">
+                <h2>Contact Details</h2>
+                <h3>Email</h3>
+                <a class="link" href="mailto:info@dafentradepark.co.uk">info@dafentradepark.co.uk</a>
+                <h3>Phone</h3>
+                <a class="link" href="tel:01554 746746">01554 746746</a>
+              </div>
+            </div>
+            <div class="width-25">
+              <div class="text-container address">
+                <h2>Address</h2>
+                <p>
+                Dafen Trade Park
+                <br>
+                Dafen
+                <br>
+                Llanelli
+                <br>
+                Carmarthenshire
+                <br>
+                United Kingdom
+                </p>
+                <a class="link" target="_blank" href="https://www.google.co.uk/maps/place/Llanelli,+Carmarthenshire+SA14+8NA/@51.6895993,-4.1241753,18z/data=!3m1!4b1!4m2!3m1!1s0x486ef2069f64d16f:0xe61dbb4edaa72f49?hl=en">Google Maps</a>
+              </div>
+            </div>
+          </div>
+
         </section>
 
       </div>
 
-      <footer class="site-footer"></footer>
+      <aside id="gallery">
+
+      </aside>
+
+      <script type="text/javascript" src="js/smooth-scroll.min.js"></script>
+      <script>
+        smoothScroll.init({
+          updateURL: false
+        });
+      </script>
 
   </body>
 </html>
