Text removed from gallery preview images.

--- a/index.html
+++ b/index.html
@@ -188,20 +188,12 @@
           <div class="dual-pane-container">
             <div class="width-50">
               <div class="gallery-preview-container">
-                <div class="image float-right" style="background: url('images/gallery/dafen-park-indoors-14.jpg')">
-                  <a href="#indoors">
-                    <span>Indoors</span>
-                  </a>
-                </div>
+                <div class="image float-right" style="background: url('images/gallery/dafen-park-indoors-14.jpg')"></div>
               </div>
             </div>
             <div class="width-50">
               <div class="gallery-preview-container">
-                <div class="image float-left" style="background: url('images/gallery/dafen-park-outdoors-08.jpg')">
-                  <a href="#outdoors">
-                    <span>Outdoors</span>
-                  </a>
-                </div>
+                <div class="image float-left" style="background: url('images/gallery/dafen-park-outdoors-08.jpg')"></div>
               </div>
             </div>
           </div>
@@ -374,11 +366,31 @@
 
         </section>
 
+        <!-- Footer Section -->
+        <footer class="site-footer">
+          <div class="bullet-container width-100">
+            <span class="width-20">
+              <h4><a data-scroll class="link" href="#about">About</a></h4>
+            </span>
+            <span class="width-20">
+              <h4><a data-scroll class="link" href="#story">Story</a></h4>
+            </span>
+            <span class="width-20">
+              <h4><a data-scroll class="link" href="#gallery">Gallery</a></h4>
+            </span>
+            <span class="width-20">
+              <h4><a data-scroll class="link" href="#team">Team</a></h4>
+            </span>
+            <span class="width-20">
+              <h4><a data-scroll class="link" href="#contact">Contact</a></h4>
+            </span>
+          </div>
+          <div class="text-container">
+            <p class="footer-text">Copyright <a href="http://rees.co.uk">Rees Group</a> 2015 | All Rights Reserved | Site by Merged</p>
+          </div>
+        </footer>
+
       </div>
-
-      <aside id="gallery">
-
-      </aside>
 
       <script type="text/javascript" src="js/smooth-scroll.min.js"></script>
       <script>
