Redrafted the site history section.

--- a/index.html
+++ b/index.html
@@ -101,13 +101,14 @@
               <div class="text-container">
                 <h2>Site History</h2>
                 <p>
-                  Originally the premises, that we have now converted into a sleek and modern trade centre, was owned and operated by Avon Inflatables.
-                  The building itself is steeped in history; being the location at which Avon designed and developed some of their best-in-class
-                  RIBs (Rigid Inflatable Boats).
+                  The products that once passed through these doors have been used by an
+                  extraordinary number of people worldwide, providing the building itself with a history rich in fabrication.
+                  The premises, that have now been transformed into a sleek and modern trade centre, were originally owned and operated by Avon Inflatables.
                   <br>
                   <br>
-                  The products that once passed through these doors have been used worldwide, with uses ranging from
-                  military to recreational use, and we feel honoured to be returning this derelict shell to its former glory.
+                  This was the location at which Avon designed and developed some of their best-in-class RIBs (Rigid Inflatable Boats),
+                  which were adopted for use by the  military, the coast guard and many other essential organisations. This allowed Avon Inflatables to
+                  redefine the boating industry from their modest Llanelli based factory and provide a plethora of skilled jobs to local tradesmen.
                 </p>
               </div>
             </div>
