Redrafted the 'On Arrival' section.

--- a/index.html
+++ b/index.html
@@ -117,12 +117,15 @@
                 <h2>On Arrival</h2>
                 <p>
                   When we first arrived on the site it was clear that this was going to be a large project. Set in approximately 2.7 acres of land,
-                  with a footprint of around 35,000 square feet, the derelict factory seemed enormous. Work on site began almost immediately after
-                  the documents had been signed and the progress that our team made was astonishing.
+                  with a footprint of around 35,000 square feet, the derelict factory seemed as though it would never end.
                   <br>
                   <br>
-                  Within two weeks, the exterior had been totally
-                  transformed from a severely overgrown wilderness to an organised and clear working environment. After years of neglect, the building
+                  We began working on site almost immediately after
+                  the documents had been signed and the progress that our team made within the first few weeks was astonishing.
+                  In around two weeks, the exterior had been totally transformed. 
+                  <br>
+                  <br>
+                  From a severely overgrown wilderness a clear and organised working environment began to emerge. After years of neglect, the building
                   was finally receiving the attention it so desperately needed.
                 </p>
               </div>
