--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   <br>
                   We began working on site almost immediately after
                   the documents had been signed and the progress that our team made within the first few weeks was astonishing.
-                  In around two weeks, the exterior had been totally transformed. 
+                  In around two weeks, the exterior had been totally transformed.
                   <br>
                   <br>
                   From a severely overgrown wilderness a clear and organised working environment began to emerge. After years of neglect, the building
@@ -137,12 +137,12 @@
               <div class="text-container">
                 <h2>The Design</h2>
                 <p>
-                  From the earliest design sketches on scrap pieces of paper to the 3D rendered CAD drawings carried out by our architecture team,
-                  the design of Dafen Trade Park has been a primary focus from day one. We take pride in creating functional and beautiful
-                  buildings that really deliver on even the most acute aspects of usability.
+                  From the earliest design sketches on scrap pieces of paper to the 3D rendered CAD drawings produced by our architecture team,
+                  the design of Dafen Trade Park has been the primary focus since day one. As a company we take pride in creating functional and beautiful
+                  spaces that deliver on even the most acute aspects of usability.
                   <br>
                   <br>
-                  We notice the fine details that others may not and
+                  We notice the finer details that others may not and
                   aim to provide a solution that is not just satisfactory, but one that has been fine tuned to ensure the highest level of quality.
                 </p>
               </div>
@@ -151,14 +151,14 @@
               <div class="text-container">
                 <h2>Completion</h2>
                 <p>
-                  Now, at the end of our journey, it's clear to us that our commitment and passion for this project has been worth it. We have
-                  had immense pleasure from watching the development take shape and we are extremely proud of what our local team of craftsmen
-                  has been able to achieve.
+                  At the end of our journey, it's clear that our commitment and passion to the project has been worth it. The pleasure we have
+                  taken from watching the development take shape is almost too much to put into words and it has made us extremely proud of what our skilled team of craftsmen
+                  have been able to achieve.
                   <br>
                   <br>
-                  We feel that supporting the local community is an extremely important goal and one that resonates
-                  throughout the development process of Dafen Trade Park and we hope that this will remain the case throughout the running of the
-                  park.
+                  Supporting the local community is an extremely important goal and one that resonates
+                  throughout the history and development of Dafen Trade Park. This will remain the case throughout the running of the
+                  park and we hope to see that many local businesses embrace the space that we have to offer.
                 </p>
               </div>
             </div>
@@ -182,9 +182,8 @@
             <div class="text-container">
               <h1>The Gallery</h1>
               <p>
-                Throughout the development process we ensured that we documented our progress. It was of great importance to us that
-                we were able to demonstrate just how dramatically the building changed throughout the transformation, and we thought that
-                the best way to do this would be to produce a photographic journal.
+                Throughout the development we ensured that the process was documented. It was of great importance to us that
+                we were able to demonstrate just how dramatically the building changed throughout its transformation.
               </p>
             </div>
           </div>
