Name changes within the team section.

--- a/index.html
+++ b/index.html
@@ -286,21 +286,21 @@
               <a class="image" style="background: url('images/team/rob.jpg')"></a>
               <span>
                 <h3>Robert Rees</h3>
-                <figcaption>Site Director</figcaption>
+                <figcaption>Managing Director</figcaption>
               </span>
             </div>
             <div>
               <a class="image" style="background: url('images/team/morton.jpg')"></a>
               <span>
                 <h3>Morton Rees</h3>
-                <figcaption>Site Manager</figcaption>
+                <figcaption>Site Director</figcaption>
               </span>
             </div>
             <div>
               <a class="image" style="background: url('images/team/phil.jpg')"></a>
               <span>
                 <h3>Phil Beynon</h3>
-                <figcaption>Contractor</figcaption>
+                <figcaption>Groundworks</figcaption>
               </span>
             </div>
             <div>
@@ -317,14 +317,14 @@
               <a class="image" style="background: url('images/team/dafs.jpg')"></a>
               <span>
                 <h3>Dafydd Lewis</h3>
-                <figcaption>Carpentry</figcaption>
+                <figcaption>Bricklaying</figcaption>
               </span>
             </div>
             <div>
               <a class="image" style="background: url('images/team/marek.jpg')"></a>
               <span>
                 <h3>Marek Ciecwierski</h3>
-                <figcaption>Carpentry</figcaption>
+                <figcaption>Plastering</figcaption>
               </span>
             </div>
             <div>
